--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,15 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+    "pyperclip==1.8.2",
+    "pytube @ git+https://github.com/nficano/pytube@d3d18691b3e99b2d3b4d620446b088a1c32896c6",
+    "pytube3==9.6.4",
+    "typing_extensions==4.4.0",
+]
+
+[project.scripts]
+yt2mp3 = "ytdownloader:ytdownloader.main"
 
 [project.urls]
 "Homepage" = "https://github.com/lemelech/ytdownloader"
