--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,7 @@ classifiers = [
 ]
 dependencies = [
     "pyperclip==1.8.2",
-    "pytube @ git+https://github.com/pytube/pytube",
-    "pytube3==9.6.4",
+    "pytube",
     "typing_extensions==4.4.0",
 ]
 
